test/spec_vectors/block/fail/module_71.wat
(module (func $type-break-empty-vs-nums (result i32 i32) (block (result i32 i32) (br 0) (i32.const 1) (i32.const 2))))